--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ production:
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
-  collation: utf8mb4_general_ci‘
+  collation: utf8mb4_general_ci
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
